# chat-with-my-repo

./: README.md  main.py  pyproject.toml
src/: chat.py  vector_db.py
