[tool.poetry]
name = "chat-with-my-repo"
version = "0.1.0"
description = ""
authors = ["chris <chris@wrtn.io>"]
readme = "README.md"
packages = [{include = "chat_with_my_repo"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.176"
gradio = "^3.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
